# kinectCV

./: .gitignore  CMakeLists.txt  README.md  vision.cpp
libs/: CMakeLists.txt
