cmake_minimum_required (VERSION 2.8)
project (Vision CXX)
include_directories(/usr/local/include/opencv2/core)
include_directories(/usr/local/include/opencv2/imgproc)
include_directories(/usr/local/include/opencv2/calib3d)
include_directories(/usr/local/include/opencv2/highgui)
include_directories(/usr/include/libusb-1.0)
include_directories(/usr/local/include/libfreenect)
include_directories(/home/adam/libfreenect/include)
include_directories(/usr/include/boost/thread)
add_subdirectory(libs)
SET_TARGET_PROPERTIES(libs PROPERTIES LINKER_LANGUAGE CXX)
add_executable(Vision vision.cpp)
target_link_libraries (Vision libs)